--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Mysql connection settings
-spring.datasource.url=jdbc:mysql://13.215.207.173:3306/cs
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://cs.cytp7snerh5r.ap-southeast-1.rds.amazonaws.com:3306/cs
+spring.datasource.username=admin
+spring.datasource.password=admin1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=false
 
