--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,5 @@
 # Mysql connection settings
-spring.datasource.url=jdbc:mysql://cs.cytp7snerh5r.ap-southeast-1.rds.amazonaws.com:3306/cs-uat
+spring.datasource.url=jdbc:mysql://cs.cytp7snerh5r.ap-southeast-1.rds.amazonaws.com:3306/cs-test
 spring.datasource.username=admin
 spring.datasource.password=admin1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
