--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,11 @@ spring.jpa.show-sql=true
 logging.level.root=info
 logging.level.org.hibernate.stat=DEBUG
 spring.jmx.enabled=false
+spring.profiles.active=basic
+
+# Jackson
+spring.jackson.default-property-inclusion=non_null
+
+# Authentication
+server.servlet.session.timeout=1m
+server.servlet.session.tracking-modes=cookie
