--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.generate-ddl=false
 spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=20
 spring.datasource.hikari.idleTimeout=30000
-spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.maxLifetime=200000
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.poolName=HikariPoolMAFC
 
@@ -34,3 +34,4 @@ spring.jackson.default-property-inclusion=non_null
 # Authentication
 server.servlet.session.timeout=1m
 server.servlet.session.tracking-modes=cookie
+application.security.disabled=true
